# notsoerp

./: .env.example  .env_template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: main.py  settings.py
app/models/: base.py  store.py
docs/: FAQ.md  app_structure.md  todo.md
erp/: __init__.py  config.py
erp/main/: routes.py
erp/models/: init_db.py  service.py  store.py
erp/modules/: __init__.py
erp/modules/sku/: forms.py  routes.py  utils.py
erp/service/users/: forms.py  init_user.py  routes.py  utils.py
erp/static/: main.css
erp/static/css/: accordion.css  main.css  main_.css
erp/static/js/: accordion.js  submenus.js
erp/templates/: about.html  home.html  layout.html
erp/templates/errors/: 403.html  404.html  500.html
erp/templates/js/: dyn_add_sku_component.js
erp/templates/login/: login.html
erp/templates/modules/: add_sku.html  layout_modules.html  modules.html
erp/templates/modules/sku/: add_sku.html  dyn_add_form.js  dyn_component_addition.html
erp/templates/service/: account.html  login.html  reset_request.html  reset_token.html
