[tool.poetry]
name = "notsoerp"
version = "0.1.0"
description = ""
authors = ["Vitalik Svt"]
readme = "README.md"

packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.0"
pytest = "^8.2.0"
sqlalchemy-utils = "^0.41.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
